# nexus-island

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  setup.sh  tailwind.config.js
scripts/: ai-hook.js  cursor-hook.mjs  opencode-hook.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  websocket.rs
src/components/: Panel.tsx  SessionDetail.tsx  SessionList.tsx  SessionRow.tsx  ToolCall.tsx
src/hooks/: useWebSocket.ts
src/lib/: types.ts
