[package]
name = "cortezia-island"
version = "0.1.0"
description = "Dynamic Island overlay for AI agent integration"
authors = ["Humberto"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "cortezia_island_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
